--- a/_posts/2018-01-01-yourself.markdown
+++ b/_posts/2018-01-01-yourself.markdown
@@ -1,23 +1,22 @@
 ---
 layout: post
-title:  "Hello World!"
+title:  "Hong Kong, Bali, Singapore, Vietnam, Cambodia, Jordan and Lebanon"
 date:   2018-01-01
 categories: blog
 ---
 
-2017 was a year of purpose. Among other things, I gave myself the chance to travel through 7 countries for a few months. A few months of opening myself, with no real expectations, to anything showing up my way. I have so much that I would like to share but I miss the words. The same way a picture cannot properly convey what our senses are perceiving when we are in front of something truly beautiful, words are not enough to express what the past few months meant to me. Some of these moments will forever remain only mine and that's fine. I only ask myself to be honest and honor them as part of who I am.
+2017 was a year of purpose. Among other things, I gave myself the chance to travel through seven countries for two months and a half. Two months and a half of opening myself to anything showing up my way without expectations. I have so much to say but can not find the words. In the same way a picture cannot properly convey what our senses are perceiving when we are in front of something truly beautiful, words are not enough to express what the past few months meant to me. Some of these moments will forever remain only mine. I only ask myself to be honest and honor them as part of who I am.
 
-If anything, I changed. My own perspective about myself changed. And that’s a good thing. I have more purpose now and I know better how I want to live my own life. I made a few big decisions to.
+If anything, I changed. My own perspective about myself changed. And that’s a good thing. I have more purpose now. I know how I want to live my life, my way. I made a few big decisions, too.
 
-Vietnam, Cambodia and Bali taught me that simplicity, integrity and truthfulness are beautiful things and that when you are true to others, and specially to yourself, you are opening doors to unforgettable experiences. These are be the moments I will remember for the rest of my life.
+Vietnam, Cambodia and Bali taught me that simplicity, integrity and truthfulness are beautiful things and when you are true to others, and especially to yourself, you are open to unforgettable experiences. These are be the moments I will remember for the rest of my life.
 
-Jordan and Lebanon showed me a different beauty in contrasts and diversity and that no matter how far away you are from home, specially during family celebrations, good friends are the fireplace that keep you warm. Thank you Daniel, Ben, Krissi, Layal, Rana, Rima, Halla, Farrah and TB for being there. It’s a privilege to be your friend.
+Jordan and Lebanon offered perspective on beauty in diversity and that no matter how far away you are from home, especially during family celebrations, good friends are the fireplace that keep you warm. Thank you Daniel, Ben, Krissi, Layal, Rana, Rima, Halla, Farrah and TB for being there. It’s a privilege to be your friend.
+I
+And then there’s Bali. I participated in a retreat called Unsettled which is a one month retreat for digital nomads or, as they define themselves, “is for those of us who embrace uncertainty and value meaningful human connection”. They give you the stage for creating those connections while getting work done. I spent all of November living in Bali, specifically in Ubud, with 26 people, which at the beginning, were complete strangers.
 
-And then there’s Bali. I participated in a retreat called Unsettled which is a 1 month retreat for digital nomads or, as they define themselves, “is for those of us who embrace uncertainty and value meaningful human connection”. They give you the stage for creating those connections while getting work done. I spent all of November living in Bali, specifically in Ubud, with 26 people, which at the beginning, were complete strangers.
+I met incredible people with very different experiences, lenses and views of the world, driven by different perspectives but all sharing the same fears. To name a few things, some of us volunteered with children at a local orphanage, I got to experience yoga/meditation and intimacy workshops in places I never imagined existed, ate healthy everyday, went on a hike to see Mount Agung when it was about to erupt, got to see the sunrise literally in the middle of a corn field, and got to know the amazingly humble and genuine Balinese people. All of it in a magical place that has so much to offer and nothing to ask. Bali, you made me feel well.
 
-I met incredible people with very different experiences, lenses and views of the world, driven by different perspectives but all sharing the same fears. To name a few things, some of us volunteered with children at a local orphanage, I got to experience yoga/meditation and intimacy workshops in places I never imagined existed, ate healthy everyday, went on a hike to see Mount Agung when it was about to erupt, got to see the sunrise literally in the middle of a corn field, or got to know the amazingly humble and genuine Balinese people. All of it in a magical place that has so much to offer and nothing to ask for. Bali, you made me feel well.
-
-To my new family ? A humble and honest thank you! All the sharing, the laughs and cries, the evenings, the parties and the gatherings around the guitar. You made me feel alive!
+To my new family - A humble and honest thank you! All the sharing, the laughs and cries, the evenings, the parties and the gatherings around the guitar. You made me feel alive!
 
 If I would have to loose everything, this memories would never go away. One way or the other, what I wish for 2018 and until the end of times, is to have the curiosity and health to keep giving myself the chance to be reborn individually and collectively while discovering the essence of what's truly important in this life. I wish the same for all of you.
-
