Another small change

--- a/_posts/2018-01-01-2017.markdown
+++ b/_posts/2018-01-01-2017.markdown
@@ -15,8 +15,6 @@ Jordan and Lebanon offered perspective on beauty in diversity and that no matter
 
 And then there’s Bali. I participated in a retreat called Unsettled, more info here https://beunsettled.co/, which is a one month retreat for digital nomads or, as they define themselves, “is for those of us who embrace uncertainty and value meaningful human connection”. They give you the stage for creating those connections while getting work done. I spent all of November living in Bali, specifically in Ubud, with 26 people, which at the beginning, were complete strangers.
 
-I met incredible people with very different experiences, lenses and views of the world, driven by different perspectives but all sharing the same fears. To name a few things, some of us volunteered with children at a local orphanage, I got to experience yoga/meditation and intimacy workshops in places I never imagined existed, ate healthy everyday, went on a hike to see Mount Agung when it was about to erupt, got to see the sunrise literally in the middle of a corn field, and got to know the amazingly humble and genuine Balinese people. All of it in a magical place that has so much to offer and nothing to ask. To my new family - A humble and honest thank you! All the sharing, the laughs and cries, the evenings, the parties and the gatherings around the guitar.
+I met incredible people with very different experiences, lenses and views of the world, driven by different perspectives but all sharing the same fears. To name a few things, some of us volunteered with children at a local orphanage, I got to experience yoga/meditation and intimacy workshops in places I never imagined existed, ate healthy everyday, went on a hike to see Mount Agung when it was about to erupt, got to see the sunrise literally in the middle of a corn field, and got to know the amazingly humble and genuine Balinese people. All of it in a magical place that has so much to offer and nothing to ask. To my new family - A humble and honest thank you! All the sharing, the laughs and cries, the evenings, the parties and the gatherings around the guitar. I felt alive!
 
-Bali, you made me feel alive!
-
-If I would have to loose everything, this memories would never go away. One way or the other, what I wish for 2018 and until the end of times, is to have the curiosity and health to keep giving myself the chance to be reborn individually and collectively while discovering the essence of what's truly important in this life. I wish the same for all of you.
+These memories will never go away. One way or the other, what I wish for 2018 and until the end of times, is to have the curiosity and health to keep giving myself the chance to be reborn individually and collectively while discovering the essence of what's truly important in this life. I wish the same for all of you.
