--- a/_posts/2018-01-01-2017.markdown
+++ b/_posts/2018-01-01-2017.markdown
@@ -5,7 +5,7 @@ date:   2018-01-01
 categories: blog
 ---
 
-2017 was a year of purpose. Among other things, I gave myself the chance to travel through seven countries for two months and a half. Two months and a half of opening myself to anything showing up my way without expectations. I have so much to say but can not find the words. In the same way a picture cannot properly convey what our senses are perceiving when we are in front of something truly beautiful, words are not enough to express what the past few months meant to me. Some of these moments will forever remain only mine. I only ask myself to be honest and honor them as part of who I am.
+2017 was a year of purpose. Among other things, I gave myself the chance to travel through seven countries for a bit more then two months. Two months of opening myself to anything showing up my way without expectations. I have so much to say but can not find the words. In the same way a picture cannot properly convey what our senses are perceiving when we are in front of something truly beautiful, words are not enough to express what the past couple months meant to me. Some of these moments will forever remain only mine. I only ask myself to be honest and honor them as part of who I am.
 
 If anything, I changed. My own perspective about myself changed. And that’s a good thing. I have more purpose now. I know how I want to live my life, my way. I made a few big decisions, too.
 
